Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLADOBLE
    COMILLASIMPRE
    INSERT
    INTO
    NUMEROSDECIMALES

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> comandocreate
Rule 5     instruccion -> comandoalter
Rule 6     instruccion -> comandotruncate
Rule 7     instruccion -> comandodrop
Rule 8     instruccion -> comandouse
Rule 9     instruccion -> comandoselect
Rule 10    instruccion -> comandoupdate
Rule 11    comandocreate -> CREATE TABLE exprecionides PARABRE datostable PARCIERRA PYC
Rule 12    datostable -> datostable datotable
Rule 13    datostable -> datotable
Rule 14    datotable -> columnas
Rule 15    columnas -> columnas COMA columna
Rule 16    columnas -> columna
Rule 17    columna -> exprecionides tipo tamanios
Rule 18    columna -> exprecionides tipo restriccion
Rule 19    columna -> exprecionides tipo
Rule 20    columna -> exprecionides tipo tamanios restriccion
Rule 21    tamanios -> PARABRE tamanios COMA tamanio PARCIERRA
Rule 22    tamanios -> PARABRE tamanio PARCIERRA
Rule 23    tamanio -> NUMEROS
Rule 24    restriccion -> PRIMARY KEY
Rule 25    restriccion -> NOT NULL
Rule 26    restriccion -> reference
Rule 27    reference -> REFERENCE exprecionides PARABRE exprecionides PARCIERRA
Rule 28    tipo -> INT
Rule 29    tipo -> TEXT
Rule 30    tipo -> nvarchar
Rule 31    tipo -> DATE
Rule 32    tipo -> DECIMAL
Rule 33    nvarchar -> NVARCHAR PARABRE NUMEROS PARCIERRA
Rule 34    comandoalter -> ALTER TABLE exprecionides ADD COLUMN exprecionides tipo PYC
Rule 35    comandoalter -> ALTER TABLE exprecionides comandodrop
Rule 36    comandotruncate -> TRUNCATE TABLE exprecionides PYC
Rule 37    comandodrop -> DROP COLUMN exprecionides PYC
Rule 38    comandodrop -> DROP TABLE exprecionides PYC
Rule 39    comandouse -> USE exprecionides PYC
Rule 40    comandoselect -> SELECT valoresselected FROM datosselect PYC
Rule 41    comandoselect -> SELECT valoresselected FROM datosselect datoswhere PYC
Rule 42    valoresselected -> MULTI
Rule 43    valoresselected -> datosselect
Rule 44    datosselect -> datosselect COMA datoselect
Rule 45    datosselect -> datosselect COMA expresion
Rule 46    datosselect -> datoselect
Rule 47    datosselect -> expresion
Rule 48    datoselect -> exprecionides
Rule 49    datoswhere -> WHERE exprecionides
Rule 50    datoswhere -> WHERE expresion
Rule 51    datoswhere -> WHERE expresion exprecionides
Rule 52    datoswhere -> WHERE exprecionides BETWEEN listasbitween
Rule 53    datoswhere -> WHERE exprecionides IGUAL expresion
Rule 54    listasbitween -> listasbitween listabitween
Rule 55    listasbitween -> listabitween
Rule 56    listabitween -> CADENA
Rule 57    listabitween -> AND
Rule 58    listabitween -> OR
Rule 59    listabitween -> exprecionides PARABRE PARCIERRA
Rule 60    listabitween -> exprecionides IGUAL expresion
Rule 61    expresion -> expresion SUMA termino
Rule 62    expresion -> expresion RESTA termino
Rule 63    expresion -> termino
Rule 64    termino -> termino MULTI factor
Rule 65    termino -> termino DIV factor
Rule 66    termino -> factor
Rule 67    factor -> exprecionides
Rule 68    factor -> NUMEROS
Rule 69    factor -> PARABRE expresion PARCIERRA
Rule 70    factor -> expresion MAYORQ expresion
Rule 71    signoscomparacion -> MAYORQ
Rule 72    signoscomparacion -> MENORQ
Rule 73    signoscomparacion -> MAYORIGUAL
Rule 74    signoscomparacion -> MENORIGUAL
Rule 75    valordeoperacion -> exprecionides
Rule 76    valordeoperacion -> NUMEROS
Rule 77    comandoupdate -> UPDATE exprecionides SET listaupdate PYC
Rule 78    listaupdate -> listaupdate COMA valorupdate
Rule 79    listaupdate -> valorupdate
Rule 80    valorupdate -> exprecionides IGUAL CADENA
Rule 81    valorupdate -> exprecionides IGUAL valordeoperacion
Rule 82    valorupdate -> exprecionides IGUAL expresion
Rule 83    valorupdate -> exprecionides IGUAL valordeoperacion datoswhere
Rule 84    exprecionides -> exprecionides PUNTO ID
Rule 85    exprecionides -> ID

Terminals, with rules where they appear

ADD                  : 34
ALTER                : 34 35
AND                  : 57
BETWEEN              : 52
CADENA               : 56 80
COLUMN               : 34 37
COMA                 : 15 21 44 45 78
COMILLADOBLE         : 
COMILLASIMPRE        : 
CREATE               : 11
DATE                 : 31
DECIMAL              : 32
DIV                  : 65
DROP                 : 37 38
FROM                 : 40 41
ID                   : 84 85
IGUAL                : 53 60 80 81 82 83
INSERT               : 
INT                  : 28
INTO                 : 
KEY                  : 24
MAYORIGUAL           : 73
MAYORQ               : 70 71
MENORIGUAL           : 74
MENORQ               : 72
MULTI                : 42 64
NOT                  : 25
NULL                 : 25
NUMEROS              : 23 33 68 76
NUMEROSDECIMALES     : 
NVARCHAR             : 33
OR                   : 58
PARABRE              : 11 21 22 27 33 59 69
PARCIERRA            : 11 21 22 27 33 59 69
PRIMARY              : 24
PUNTO                : 84
PYC                  : 11 34 36 37 38 39 40 41 77
REFERENCE            : 27
RESTA                : 62
SELECT               : 40 41
SET                  : 77
SUMA                 : 61
TABLE                : 11 34 35 36 38
TEXT                 : 29
TRUNCATE             : 36
UPDATE               : 77
USE                  : 39
WHERE                : 49 50 51 52 53
error                : 

Nonterminals, with rules where they appear

columna              : 15 16
columnas             : 14 15
comandoalter         : 5
comandocreate        : 4
comandodrop          : 7 35
comandoselect        : 9
comandotruncate      : 6
comandoupdate        : 10
comandouse           : 8
datoselect           : 44 46
datosselect          : 40 41 43 44 45
datostable           : 11 12
datoswhere           : 41 83
datotable            : 12 13
exprecionides        : 11 17 18 19 20 27 27 34 34 35 36 37 38 39 48 49 51 52 53 59 60 67 75 77 80 81 82 83 84
expresion            : 45 47 50 51 53 60 61 62 69 70 70 82
factor               : 64 65 66
inicio               : 0
instruccion          : 2 3
instrucciones        : 1 2
listabitween         : 54 55
listasbitween        : 52 54
listaupdate          : 77 78
nvarchar             : 30
reference            : 26
restriccion          : 18 20
signoscomparacion    : 
tamanio              : 21 22
tamanios             : 17 20 21
termino              : 61 62 63 64 65
tipo                 : 17 18 19 20 34
valordeoperacion     : 81 83
valoresselected      : 40 41
valorupdate          : 78 79

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . comandocreate
    (5) instruccion -> . comandoalter
    (6) instruccion -> . comandotruncate
    (7) instruccion -> . comandodrop
    (8) instruccion -> . comandouse
    (9) instruccion -> . comandoselect
    (10) instruccion -> . comandoupdate
    (11) comandocreate -> . CREATE TABLE exprecionides PARABRE datostable PARCIERRA PYC
    (34) comandoalter -> . ALTER TABLE exprecionides ADD COLUMN exprecionides tipo PYC
    (35) comandoalter -> . ALTER TABLE exprecionides comandodrop
    (36) comandotruncate -> . TRUNCATE TABLE exprecionides PYC
    (37) comandodrop -> . DROP COLUMN exprecionides PYC
    (38) comandodrop -> . DROP TABLE exprecionides PYC
    (39) comandouse -> . USE exprecionides PYC
    (40) comandoselect -> . SELECT valoresselected FROM datosselect PYC
    (41) comandoselect -> . SELECT valoresselected FROM datosselect datoswhere PYC
    (77) comandoupdate -> . UPDATE exprecionides SET listaupdate PYC

    CREATE          shift and go to state 11
    ALTER           shift and go to state 12
    TRUNCATE        shift and go to state 13
    DROP            shift and go to state 14
    USE             shift and go to state 15
    SELECT          shift and go to state 16
    UPDATE          shift and go to state 17

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    comandocreate                  shift and go to state 4
    comandoalter                   shift and go to state 5
    comandotruncate                shift and go to state 6
    comandodrop                    shift and go to state 7
    comandouse                     shift and go to state 8
    comandoselect                  shift and go to state 9
    comandoupdate                  shift and go to state 10

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . comandocreate
    (5) instruccion -> . comandoalter
    (6) instruccion -> . comandotruncate
    (7) instruccion -> . comandodrop
    (8) instruccion -> . comandouse
    (9) instruccion -> . comandoselect
    (10) instruccion -> . comandoupdate
    (11) comandocreate -> . CREATE TABLE exprecionides PARABRE datostable PARCIERRA PYC
    (34) comandoalter -> . ALTER TABLE exprecionides ADD COLUMN exprecionides tipo PYC
    (35) comandoalter -> . ALTER TABLE exprecionides comandodrop
    (36) comandotruncate -> . TRUNCATE TABLE exprecionides PYC
    (37) comandodrop -> . DROP COLUMN exprecionides PYC
    (38) comandodrop -> . DROP TABLE exprecionides PYC
    (39) comandouse -> . USE exprecionides PYC
    (40) comandoselect -> . SELECT valoresselected FROM datosselect PYC
    (41) comandoselect -> . SELECT valoresselected FROM datosselect datoswhere PYC
    (77) comandoupdate -> . UPDATE exprecionides SET listaupdate PYC

    $end            reduce using rule 1 (inicio -> instrucciones .)
    CREATE          shift and go to state 11
    ALTER           shift and go to state 12
    TRUNCATE        shift and go to state 13
    DROP            shift and go to state 14
    USE             shift and go to state 15
    SELECT          shift and go to state 16
    UPDATE          shift and go to state 17

    instruccion                    shift and go to state 18
    comandocreate                  shift and go to state 4
    comandoalter                   shift and go to state 5
    comandotruncate                shift and go to state 6
    comandodrop                    shift and go to state 7
    comandouse                     shift and go to state 8
    comandoselect                  shift and go to state 9
    comandoupdate                  shift and go to state 10

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    TRUNCATE        reduce using rule 3 (instrucciones -> instruccion .)
    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    USE             reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> comandocreate .

    CREATE          reduce using rule 4 (instruccion -> comandocreate .)
    ALTER           reduce using rule 4 (instruccion -> comandocreate .)
    TRUNCATE        reduce using rule 4 (instruccion -> comandocreate .)
    DROP            reduce using rule 4 (instruccion -> comandocreate .)
    USE             reduce using rule 4 (instruccion -> comandocreate .)
    SELECT          reduce using rule 4 (instruccion -> comandocreate .)
    UPDATE          reduce using rule 4 (instruccion -> comandocreate .)
    $end            reduce using rule 4 (instruccion -> comandocreate .)


state 5

    (5) instruccion -> comandoalter .

    CREATE          reduce using rule 5 (instruccion -> comandoalter .)
    ALTER           reduce using rule 5 (instruccion -> comandoalter .)
    TRUNCATE        reduce using rule 5 (instruccion -> comandoalter .)
    DROP            reduce using rule 5 (instruccion -> comandoalter .)
    USE             reduce using rule 5 (instruccion -> comandoalter .)
    SELECT          reduce using rule 5 (instruccion -> comandoalter .)
    UPDATE          reduce using rule 5 (instruccion -> comandoalter .)
    $end            reduce using rule 5 (instruccion -> comandoalter .)


state 6

    (6) instruccion -> comandotruncate .

    CREATE          reduce using rule 6 (instruccion -> comandotruncate .)
    ALTER           reduce using rule 6 (instruccion -> comandotruncate .)
    TRUNCATE        reduce using rule 6 (instruccion -> comandotruncate .)
    DROP            reduce using rule 6 (instruccion -> comandotruncate .)
    USE             reduce using rule 6 (instruccion -> comandotruncate .)
    SELECT          reduce using rule 6 (instruccion -> comandotruncate .)
    UPDATE          reduce using rule 6 (instruccion -> comandotruncate .)
    $end            reduce using rule 6 (instruccion -> comandotruncate .)


state 7

    (7) instruccion -> comandodrop .

    CREATE          reduce using rule 7 (instruccion -> comandodrop .)
    ALTER           reduce using rule 7 (instruccion -> comandodrop .)
    TRUNCATE        reduce using rule 7 (instruccion -> comandodrop .)
    DROP            reduce using rule 7 (instruccion -> comandodrop .)
    USE             reduce using rule 7 (instruccion -> comandodrop .)
    SELECT          reduce using rule 7 (instruccion -> comandodrop .)
    UPDATE          reduce using rule 7 (instruccion -> comandodrop .)
    $end            reduce using rule 7 (instruccion -> comandodrop .)


state 8

    (8) instruccion -> comandouse .

    CREATE          reduce using rule 8 (instruccion -> comandouse .)
    ALTER           reduce using rule 8 (instruccion -> comandouse .)
    TRUNCATE        reduce using rule 8 (instruccion -> comandouse .)
    DROP            reduce using rule 8 (instruccion -> comandouse .)
    USE             reduce using rule 8 (instruccion -> comandouse .)
    SELECT          reduce using rule 8 (instruccion -> comandouse .)
    UPDATE          reduce using rule 8 (instruccion -> comandouse .)
    $end            reduce using rule 8 (instruccion -> comandouse .)


state 9

    (9) instruccion -> comandoselect .

    CREATE          reduce using rule 9 (instruccion -> comandoselect .)
    ALTER           reduce using rule 9 (instruccion -> comandoselect .)
    TRUNCATE        reduce using rule 9 (instruccion -> comandoselect .)
    DROP            reduce using rule 9 (instruccion -> comandoselect .)
    USE             reduce using rule 9 (instruccion -> comandoselect .)
    SELECT          reduce using rule 9 (instruccion -> comandoselect .)
    UPDATE          reduce using rule 9 (instruccion -> comandoselect .)
    $end            reduce using rule 9 (instruccion -> comandoselect .)


state 10

    (10) instruccion -> comandoupdate .

    CREATE          reduce using rule 10 (instruccion -> comandoupdate .)
    ALTER           reduce using rule 10 (instruccion -> comandoupdate .)
    TRUNCATE        reduce using rule 10 (instruccion -> comandoupdate .)
    DROP            reduce using rule 10 (instruccion -> comandoupdate .)
    USE             reduce using rule 10 (instruccion -> comandoupdate .)
    SELECT          reduce using rule 10 (instruccion -> comandoupdate .)
    UPDATE          reduce using rule 10 (instruccion -> comandoupdate .)
    $end            reduce using rule 10 (instruccion -> comandoupdate .)


state 11

    (11) comandocreate -> CREATE . TABLE exprecionides PARABRE datostable PARCIERRA PYC

    TABLE           shift and go to state 19


state 12

    (34) comandoalter -> ALTER . TABLE exprecionides ADD COLUMN exprecionides tipo PYC
    (35) comandoalter -> ALTER . TABLE exprecionides comandodrop

    TABLE           shift and go to state 20


state 13

    (36) comandotruncate -> TRUNCATE . TABLE exprecionides PYC

    TABLE           shift and go to state 21


state 14

    (37) comandodrop -> DROP . COLUMN exprecionides PYC
    (38) comandodrop -> DROP . TABLE exprecionides PYC

    COLUMN          shift and go to state 22
    TABLE           shift and go to state 23


state 15

    (39) comandouse -> USE . exprecionides PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 24

state 16

    (40) comandoselect -> SELECT . valoresselected FROM datosselect PYC
    (41) comandoselect -> SELECT . valoresselected FROM datosselect datoswhere PYC
    (42) valoresselected -> . MULTI
    (43) valoresselected -> . datosselect
    (44) datosselect -> . datosselect COMA datoselect
    (45) datosselect -> . datosselect COMA expresion
    (46) datosselect -> . datoselect
    (47) datosselect -> . expresion
    (48) datoselect -> . exprecionides
    (61) expresion -> . expresion SUMA termino
    (62) expresion -> . expresion RESTA termino
    (63) expresion -> . termino
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID
    (64) termino -> . termino MULTI factor
    (65) termino -> . termino DIV factor
    (66) termino -> . factor
    (67) factor -> . exprecionides
    (68) factor -> . NUMEROS
    (69) factor -> . PARABRE expresion PARCIERRA
    (70) factor -> . expresion MAYORQ expresion

    MULTI           shift and go to state 28
    ID              shift and go to state 25
    NUMEROS         shift and go to state 34
    PARABRE         shift and go to state 35

    valoresselected                shift and go to state 26
    datosselect                    shift and go to state 27
    datoselect                     shift and go to state 29
    expresion                      shift and go to state 30
    exprecionides                  shift and go to state 31
    termino                        shift and go to state 32
    factor                         shift and go to state 33

state 17

    (77) comandoupdate -> UPDATE . exprecionides SET listaupdate PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 36

state 18

    (2) instrucciones -> instrucciones instruccion .

    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ALTER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TRUNCATE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DROP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    USE             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SELECT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UPDATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 19

    (11) comandocreate -> CREATE TABLE . exprecionides PARABRE datostable PARCIERRA PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 37

state 20

    (34) comandoalter -> ALTER TABLE . exprecionides ADD COLUMN exprecionides tipo PYC
    (35) comandoalter -> ALTER TABLE . exprecionides comandodrop
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 38

state 21

    (36) comandotruncate -> TRUNCATE TABLE . exprecionides PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 39

state 22

    (37) comandodrop -> DROP COLUMN . exprecionides PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 40

state 23

    (38) comandodrop -> DROP TABLE . exprecionides PYC
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    ID              shift and go to state 25

    exprecionides                  shift and go to state 41

state 24

    (39) comandouse -> USE exprecionides . PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    PYC             shift and go to state 42
    PUNTO           shift and go to state 43


state 25

    (85) exprecionides -> ID .

    PYC             reduce using rule 85 (exprecionides -> ID .)
    PUNTO           reduce using rule 85 (exprecionides -> ID .)
    COMA            reduce using rule 85 (exprecionides -> ID .)
    FROM            reduce using rule 85 (exprecionides -> ID .)
    MULTI           reduce using rule 85 (exprecionides -> ID .)
    DIV             reduce using rule 85 (exprecionides -> ID .)
    SUMA            reduce using rule 85 (exprecionides -> ID .)
    RESTA           reduce using rule 85 (exprecionides -> ID .)
    MAYORQ          reduce using rule 85 (exprecionides -> ID .)
    SET             reduce using rule 85 (exprecionides -> ID .)
    PARABRE         reduce using rule 85 (exprecionides -> ID .)
    ADD             reduce using rule 85 (exprecionides -> ID .)
    DROP            reduce using rule 85 (exprecionides -> ID .)
    PARCIERRA       reduce using rule 85 (exprecionides -> ID .)
    WHERE           reduce using rule 85 (exprecionides -> ID .)
    ID              reduce using rule 85 (exprecionides -> ID .)
    CADENA          reduce using rule 85 (exprecionides -> ID .)
    AND             reduce using rule 85 (exprecionides -> ID .)
    OR              reduce using rule 85 (exprecionides -> ID .)
    IGUAL           reduce using rule 85 (exprecionides -> ID .)
    INT             reduce using rule 85 (exprecionides -> ID .)
    TEXT            reduce using rule 85 (exprecionides -> ID .)
    DATE            reduce using rule 85 (exprecionides -> ID .)
    DECIMAL         reduce using rule 85 (exprecionides -> ID .)
    NVARCHAR        reduce using rule 85 (exprecionides -> ID .)
    BETWEEN         reduce using rule 85 (exprecionides -> ID .)


state 26

    (40) comandoselect -> SELECT valoresselected . FROM datosselect PYC
    (41) comandoselect -> SELECT valoresselected . FROM datosselect datoswhere PYC

    FROM            shift and go to state 44


state 27

    (43) valoresselected -> datosselect .
    (44) datosselect -> datosselect . COMA datoselect
    (45) datosselect -> datosselect . COMA expresion

    FROM            reduce using rule 43 (valoresselected -> datosselect .)
    COMA            shift and go to state 45


state 28

    (42) valoresselected -> MULTI .

    FROM            reduce using rule 42 (valoresselected -> MULTI .)


state 29

    (46) datosselect -> datoselect .

    COMA            reduce using rule 46 (datosselect -> datoselect .)
    FROM            reduce using rule 46 (datosselect -> datoselect .)
    PYC             reduce using rule 46 (datosselect -> datoselect .)
    WHERE           reduce using rule 46 (datosselect -> datoselect .)


state 30

    (47) datosselect -> expresion .
    (61) expresion -> expresion . SUMA termino
    (62) expresion -> expresion . RESTA termino
    (70) factor -> expresion . MAYORQ expresion

    COMA            reduce using rule 47 (datosselect -> expresion .)
    FROM            reduce using rule 47 (datosselect -> expresion .)
    PYC             reduce using rule 47 (datosselect -> expresion .)
    WHERE           reduce using rule 47 (datosselect -> expresion .)
    SUMA            shift and go to state 46
    RESTA           shift and go to state 47
    MAYORQ          shift and go to state 48


state 31

    (48) datoselect -> exprecionides .
    (84) exprecionides -> exprecionides . PUNTO ID
    (67) factor -> exprecionides .

  ! reduce/reduce conflict for COMA resolved using rule 48 (datoselect -> exprecionides .)
  ! reduce/reduce conflict for FROM resolved using rule 48 (datoselect -> exprecionides .)
  ! reduce/reduce conflict for PYC resolved using rule 48 (datoselect -> exprecionides .)
  ! reduce/reduce conflict for WHERE resolved using rule 48 (datoselect -> exprecionides .)
    COMA            reduce using rule 48 (datoselect -> exprecionides .)
    FROM            reduce using rule 48 (datoselect -> exprecionides .)
    PYC             reduce using rule 48 (datoselect -> exprecionides .)
    WHERE           reduce using rule 48 (datoselect -> exprecionides .)
    PUNTO           shift and go to state 43
    MULTI           reduce using rule 67 (factor -> exprecionides .)
    DIV             reduce using rule 67 (factor -> exprecionides .)
    SUMA            reduce using rule 67 (factor -> exprecionides .)
    RESTA           reduce using rule 67 (factor -> exprecionides .)
    MAYORQ          reduce using rule 67 (factor -> exprecionides .)

  ! COMA            [ reduce using rule 67 (factor -> exprecionides .) ]
  ! FROM            [ reduce using rule 67 (factor -> exprecionides .) ]
  ! PYC             [ reduce using rule 67 (factor -> exprecionides .) ]
  ! WHERE           [ reduce using rule 67 (factor -> exprecionides .) ]


state 32

    (63) expresion -> termino .
    (64) termino -> termino . MULTI factor
    (65) termino -> termino . DIV factor

  ! shift/reduce conflict for MULTI resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SUMA            reduce using rule 63 (expresion -> termino .)
    RESTA           reduce using rule 63 (expresion -> termino .)
    MAYORQ          reduce using rule 63 (expresion -> termino .)
    COMA            reduce using rule 63 (expresion -> termino .)
    FROM            reduce using rule 63 (expresion -> termino .)
    PARCIERRA       reduce using rule 63 (expresion -> termino .)
    PYC             reduce using rule 63 (expresion -> termino .)
    WHERE           reduce using rule 63 (expresion -> termino .)
    ID              reduce using rule 63 (expresion -> termino .)
    CADENA          reduce using rule 63 (expresion -> termino .)
    AND             reduce using rule 63 (expresion -> termino .)
    OR              reduce using rule 63 (expresion -> termino .)
    MULTI           shift and go to state 49
    DIV             shift and go to state 50

  ! MULTI           [ reduce using rule 63 (expresion -> termino .) ]
  ! DIV             [ reduce using rule 63 (expresion -> termino .) ]


state 33

    (66) termino -> factor .

    MULTI           reduce using rule 66 (termino -> factor .)
    DIV             reduce using rule 66 (termino -> factor .)
    SUMA            reduce using rule 66 (termino -> factor .)
    RESTA           reduce using rule 66 (termino -> factor .)
    MAYORQ          reduce using rule 66 (termino -> factor .)
    COMA            reduce using rule 66 (termino -> factor .)
    FROM            reduce using rule 66 (termino -> factor .)
    PARCIERRA       reduce using rule 66 (termino -> factor .)
    PYC             reduce using rule 66 (termino -> factor .)
    WHERE           reduce using rule 66 (termino -> factor .)
    ID              reduce using rule 66 (termino -> factor .)
    CADENA          reduce using rule 66 (termino -> factor .)
    AND             reduce using rule 66 (termino -> factor .)
    OR              reduce using rule 66 (termino -> factor .)


state 34

    (68) factor -> NUMEROS .

    MULTI           reduce using rule 68 (factor -> NUMEROS .)
    DIV             reduce using rule 68 (factor -> NUMEROS .)
    SUMA            reduce using rule 68 (factor -> NUMEROS .)
    RESTA           reduce using rule 68 (factor -> NUMEROS .)
    MAYORQ          reduce using rule 68 (factor -> NUMEROS .)
    COMA            reduce using rule 68 (factor -> NUMEROS .)
    FROM            reduce using rule 68 (factor -> NUMEROS .)
    PARCIERRA       reduce using rule 68 (factor -> NUMEROS .)
    PYC             reduce using rule 68 (factor -> NUMEROS .)
    WHERE           reduce using rule 68 (factor -> NUMEROS .)
    ID              reduce using rule 68 (factor -> NUMEROS .)
    CADENA          reduce using rule 68 (factor -> NUMEROS .)
    AND             reduce using rule 68 (factor -> NUMEROS .)
    OR              reduce using rule 68 (factor -> NUMEROS .)


state 35

    (69) factor -> PARABRE . expresion PARCIERRA
    (61) expresion -> . expresion SUMA termino
    (62) expresion -> . expresion RESTA termino
    (63) expresion -> . termino
    (64) termino -> . termino MULTI factor
    (65) termino -> . termino DIV factor
    (66) termino -> . factor
    (67) factor -> . exprecionides
    (68) factor -> . NUMEROS
    (69) factor -> . PARABRE expresion PARCIERRA
    (70) factor -> . expresion MAYORQ expresion
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID

    NUMEROS         shift and go to state 34
    PARABRE         shift and go to state 35
    ID              shift and go to state 25

    expresion                      shift and go to state 51
    termino                        shift and go to state 32
    factor                         shift and go to state 33
    exprecionides                  shift and go to state 52

state 36

    (77) comandoupdate -> UPDATE exprecionides . SET listaupdate PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    SET             shift and go to state 53
    PUNTO           shift and go to state 43


state 37

    (11) comandocreate -> CREATE TABLE exprecionides . PARABRE datostable PARCIERRA PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    PARABRE         shift and go to state 54
    PUNTO           shift and go to state 43


state 38

    (34) comandoalter -> ALTER TABLE exprecionides . ADD COLUMN exprecionides tipo PYC
    (35) comandoalter -> ALTER TABLE exprecionides . comandodrop
    (84) exprecionides -> exprecionides . PUNTO ID
    (37) comandodrop -> . DROP COLUMN exprecionides PYC
    (38) comandodrop -> . DROP TABLE exprecionides PYC

    ADD             shift and go to state 55
    PUNTO           shift and go to state 43
    DROP            shift and go to state 14

    comandodrop                    shift and go to state 56

state 39

    (36) comandotruncate -> TRUNCATE TABLE exprecionides . PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    PYC             shift and go to state 57
    PUNTO           shift and go to state 43


state 40

    (37) comandodrop -> DROP COLUMN exprecionides . PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    PYC             shift and go to state 58
    PUNTO           shift and go to state 43


state 41

    (38) comandodrop -> DROP TABLE exprecionides . PYC
    (84) exprecionides -> exprecionides . PUNTO ID

    PYC             shift and go to state 59
    PUNTO           shift and go to state 43


state 42

    (39) comandouse -> USE exprecionides PYC .

    CREATE          reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    ALTER           reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    TRUNCATE        reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    DROP            reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    USE             reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    SELECT          reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    UPDATE          reduce using rule 39 (comandouse -> USE exprecionides PYC .)
    $end            reduce using rule 39 (comandouse -> USE exprecionides PYC .)


state 43

    (84) exprecionides -> exprecionides PUNTO . ID

    ID              shift and go to state 60


state 44

    (40) comandoselect -> SELECT valoresselected FROM . datosselect PYC
    (41) comandoselect -> SELECT valoresselected FROM . datosselect datoswhere PYC
    (44) datosselect -> . datosselect COMA datoselect
    (45) datosselect -> . datosselect COMA expresion
    (46) datosselect -> . datoselect
    (47) datosselect -> . expresion
    (48) datoselect -> . exprecionides
    (61) expresion -> . expresion SUMA termino
    (62) expresion -> . expresion RESTA termino
    (63) expresion -> . termino
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID
    (64) termino -> . termino MULTI factor
    (65) termino -> . termino DIV factor
    (66) termino -> . factor
    (67) factor -> . exprecionides
    (68) factor -> . NUMEROS
    (69) factor -> . PARABRE expresion PARCIERRA
    (70) factor -> . expresion MAYORQ expresion

    ID              shift and go to state 25
    NUMEROS         shift and go to state 34
    PARABRE         shift and go to state 35

    datosselect                    shift and go to state 61
    datoselect                     shift and go to state 29
    expresion                      shift and go to state 30
    exprecionides                  shift and go to state 31
    termino                        shift and go to state 32
    factor                         shift and go to state 33

state 45

    (44) datosselect -> datosselect COMA . datoselect
    (45) datosselect -> datosselect COMA . expresion
    (48) datoselect -> . exprecionides
    (61) expresion -> . expresion SUMA termino
    (62) expresion -> . expresion RESTA termino
    (63) expresion -> . termino
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID
    (64) termino -> . termino MULTI factor
    (65) termino -> . termino DIV factor
    (66) termino -> . factor
    (67) factor -> . exprecionides
    (68) factor -> . NUMEROS
    (69) factor -> . PARABRE expresion PARCIERRA
    (70) factor -> . expresion MAYORQ expresion

    ID              shift and go to state 25
    NUMEROS         shift and go to state 34
    PARABRE         shift and go to state 35

    datoselect                     shift and go to state 62
    expresion                      shift and go to state 63
    exprecionides                  shift and go to state 31
    termino                        shift and go to state 32
    factor                         shift and go to state 33

state 46

    (61) expresion -> expresion SUMA . termino
    (64) termino -> . termino MULTI factor
    (65) termino -> . termino DIV factor
    (66) termino -> . factor
    (67) factor -> . exprecionides
    (68) factor -> . NUMEROS
    (69) factor -> . PARABRE expresion PARCIERRA
    (70) factor -> . expresion MAYORQ expresion
    (84) exprecionides -> . exprecionides PUNTO ID
    (85) exprecionides -> . ID
    (61) expresion -> . expresion SUMA termino
    (62) expresion -> . expresion RESTA termino
    (63) expresion -> . termino

    NUMEROS         shift and go to state 34
    PARABRE         shift and go to state 35
    ID              shift and go to state 25
